fix text-field: remove border on firefox in invalid text fields

--- a/modules/text-field/scss/_text-field.scss
+++ b/modules/text-field/scss/_text-field.scss
@@ -170,6 +170,7 @@
         cursor: text;
         background-color: transparent;
         @include appearance(none);
+        box-shadow: none;
 
         &:focus {
             outline: none;
